<?xml version="1.0" encoding="UTF-8"?>

<!--
  ~ Copyright (c) 2012-2024 Savoir Technologies, Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>com.savoir</groupId>
  <artifactId>apache-karaf-ai</artifactId>
  <packaging>pom</packaging>
  <version>1.0.0-SNAPSHOT</version>

  <name>Apache-Karaf-LangChain4J-AI-DEMO</name>
  <description>Apache Karaf AI API Gateway</description>
  <url>https://www.savoirtech.com/</url>

  <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

      <commons-lang3.version>3.4</commons-lang3.version>
      <cxf.version>3.5.5</cxf.version>
      <eos.version>1.1.0</eos.version>
      <gson.version>2.10.1</gson.version>
      <guava.version>18.0</guava.version>
      <jackson.version>2.14.1</jackson.version>
      <javax.ws.rs-api.version>2.1</javax.ws.rs-api.version>
      <jettison.version>1.3.7</jettison.version>
      <jtokkit.version>1.1.0</jtokkit.version>
      <maven.bundle.plugin.version>5.1.6</maven.bundle.plugin.version>
      <osgi.core.version>8.0.0</osgi.core.version>
      <owasp-dependency-check-version>7.2.1</owasp-dependency-check-version>
      <slf4j-api.version>1.7.32</slf4j-api.version>

      <pax.exam.version>4.13.5</pax.exam.version>
      <felix.version>7.0.5</felix.version>
      <equinox.version>3.18.0</equinox.version>
      <karaf.version>4.4.6</karaf.version>

      <langchain4j.version>0.33.0</langchain4j.version>
  </properties>

  <modules>
      <module>api</module>
      <module>spi</module>
      <module>plugins</module>
      <module>impl</module>
      <!-- Keep features for last -->
      <module>features</module>
      <!-- Integration Testing -->
      <module>itests</module>
  </modules>

<pluginRepositories>
    <!-- Apache snapshots -->
    <pluginRepository>
      <id>apache-snapshots</id>
      <name>Apache Snapshots Repository</name>
      <url>https://repository.apache.org/content/groups/snapshots-group</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </pluginRepository>
  </pluginRepositories>


    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.10.1</version>
                    <configuration>
                        <source>11</source>
                        <target>11</target>
                        <maxmem>256M</maxmem>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
                <source>11</source>
                <target>11</target>
                <maxmem>512M</maxmem>
            </configuration>
        </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-enforcer-plugin</artifactId>
            <version>3.1.0</version>
            <executions>
                <execution>
                    <id>enforce-maven</id>
                    <goals>
                        <goal>enforce</goal>
                    </goals>
                    <configuration>
                        <rules>
                            <requireMavenVersion>
                                <version>[3.5.3,4)</version>
                            </requireMavenVersion>
                            <requireJavaVersion>
                                <version>[11,)</version>
                            </requireJavaVersion>
                        </rules>
                    </configuration>
                </execution>
            </executions>
        </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>java9-plus</id>
            <properties>
                <surefire.argLine>
                    --add-opens java.base/java.security=ALL-UNNAMED
                    --add-opens java.base/java.net=ALL-UNNAMED
                    --add-opens java.base/java.lang=ALL-UNNAMED
                    --add-opens java.base/java.util=ALL-UNNAMED
                    --add-opens java.naming/javax.naming.spi=ALL-UNNAMED
                    --add-opens java.rmi/sun.rmi.transport.tcp=ALL-UNNAMED
                </surefire.argLine>
            </properties>
            <activation>
                <jdk>[9,)</jdk>
            </activation>
        </profile>
        <!-- Execute owasp dependency check plugin :: mvn install -P owasp -->
        <profile>
            <id>owasp</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.owasp</groupId>
                        <artifactId>dependency-check-maven</artifactId>
                        <version>${owasp-dependency-check-version}</version>
                        <configuration>
                            <skipProvidedScope>true</skipProvidedScope>
                            <skipRuntimeScope>true</skipRuntimeScope>
                            <skipSystemScope>true</skipSystemScope>
                            <reportSets>
                                <reportSet>
                                    <reports>
                                        <report>aggregate</report>
                                    </reports>
                                </reportSet>
                            </reportSets>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>check</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
